--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@storybook/addon-docs": "^6.3.12",
+    "@storybook/react": "^6.3.12",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react-hooks": "^7.0.2"
+    "@babel/core": "^7.16.0",
+    "@testing-library/react-hooks": "^7.0.2",
+    "babel-loader": "^8.2.3"
   }
 }
