--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@storybook/addon-docs": "^6.3.12",
     "@storybook/react": "^6.3.12",
     "@testing-library/jest-dom": "^5.11.4",
@@ -15,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -46,6 +49,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@testing-library/react-hooks": "^7.0.2",
+    "@types/styled-components": "^5.1.15",
     "babel-loader": "^8.2.3"
   }
 }
