--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@testing-library/react-hooks": "^7.0.2",
-    "@types/styled-components": "^5.1.15",
-    "babel-loader": "^8.2.3"
+    "@types/styled-components": "^5.1.15"
   }
 }
